connexion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: connexion
  name: connexion
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: connexion
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.27.0 (b0ed6a2c9)
      creationTimestamp: null
      labels:
        io.kompose.network/sample: "true"
        io.kompose.service: connexion
    spec:
      containers:
        - image: kaouwane1/connexion:latest
          name: connexion
          ports:
            - containerPort: 5000
          resources: {}
      hostname: connexion
      restartPolicy: Always
status: {}
