notes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: notes
  name: notes
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: notes
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.27.0 (b0ed6a2c9)
      creationTimestamp: null
      labels:
        io.kompose.network/sample: "true"
        io.kompose.service: notes
    spec:
      containers:
        - image: kaouwane1/affichage:latest
          name: notes
          ports:
            - containerPort: 5001
          resources: {}
      hostname: notes
      restartPolicy: Always
status: {}
