notes-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: notes
  name: notes
spec:
  type: LoadBalancer
  externalIPs:
  - 192.168.64.2
  ports:
    - name: "5001"
      port: 5001
      targetPort: 5001
      nodePort: 30002
  selector:
    io.kompose.service: notes
